--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Google Font -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
 </head>
 <body>
-    
+    <div class="page">
+        <div class="container">
+            <h3>LOGIN</h3>
+            <form action="">
+                <div class="username">
+                    <p>Username: </p>
+                    <input type="text">
+                </div>
+                <div class="password">
+                    <p>Password: </p>
+                    <input type="password">
+                </div>
+                <div class="remember-me">
+                    <p>Remember Me</p>
+                    <input type="checkbox">
+                </div>
+                <div class="register">
+                    <p>Doesn't have account? </p>
+                    <a href="#">Create Account</a>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
